# gigacube-analyser

./: Makefile  README.md
dashboard/: dashboard.service  pyproject.toml
dashboard/src/: app.py
scraper/: .env.example  Makefile  config.cron  execute.sh  pyproject.toml  scraper_job.sh  scrapy.cfg
scraper/communicate/: create_schema.py  dbutils.py
scraper/communicate/schemas/: gigacube.sql
scraper/fetch/: settings.py
scraper/fetch/spiders/: __init__.py
server/: README.md
